# SqlTest

./: .editorconfig  .gitignore  CMakeLists.txt  CPackConfig.cmake.in  NOTES.md  README.md  SqlTestConfig.cmake.in
.github/workflows/: build.yml  release.yml
app/: CMakeLists.txt  database.cpp  database.h  main.cpp  sqltester.qrc
app/data/: qtquickcontrols2.conf
app/qml/: ConnectionDialog.qml  ConnectionForm.ui.qml  ResultsView-old.qml  ResultsView.qml  main-bak.qml  main.qml
cli/: CMakeLists.txt  main.cpp
cmake/: AddResources.cmake
lib/: CMakeLists.txt  QSqlTest.cpp  QSqlTest.h  QSqlTestCsvFile.cpp  QSqlTestCsvFile.h  QSqlTestDatabase.cpp  QSqlTestDatabase.h  QSqlTestJsonFile.cpp  QSqlTestJsonFile.h  QSqlTestLogger.cpp  QSqlTestLogger.h
tests/: CMakeLists.txt  tst_sqltest.cpp  tst_sqltest.h
tests/fixtures/: superheroes.json  superheroes_input.csv  superheroes_output_city.csv  superheroes_output_lastname.csv  superheroes_output_name.csv  superheroes_output_power.csv  superheroes_power.csv
